@@ -409,6 +409,7 @@ runAbsoluteCN <- function(normal.coverage.file = NULL,
     args.filterIntervals <- c(list(normal=normal, tumor = tumor, 
         log.ratio = log.ratio, seg.file = seg.file, 
         normalDB = normalDB), args.filterIntervals)
+
     # make it possible to provide different coverages for the different
     # filters 
     if (is.null(args.filterIntervals$min.coverage)) {
@@ -445,6 +446,12 @@ runAbsoluteCN <- function(normal.coverage.file = NULL,
          flog.info("Mean off-target bin size: %.0f",
             mean(width(tumor[!tumor$on.target]), na.rm = TRUE))
     }
+    if (!is.null(normalDB$sd$weights)) {
+        tumor$weights <- subsetByOverlaps(normalDB$sd$weights, tumor)$weights
+    }    
+    # not needed anymore
+    normalDB <- NULL
+
     if (smooth.log.ratio) {
         log.ratio <- smooth.CNA(
             .getCNAobject(log.ratio, normal, chr.hash, "sample"))$sample
@@ -551,12 +558,10 @@ runAbsoluteCN <- function(normal.coverage.file = NULL,
         if (is.null(vcf)) NULL else seqlevelsStyle(vcf))
     
     args.segmentation <- c(list(normal = normal, tumor = tumor, log.ratio = log.ratio, 
-        seg = segProvided, normalDB = normalDB, plot.cnv = plot.cnv,  
+        seg = segProvided, plot.cnv = plot.cnv,  
         sampleid = sampleid, vcf = vcf.germline, tumor.id.in.vcf = tumor.id.in.vcf, 
         normal.id.in.vcf = normal.id.in.vcf, max.segments = max.segments, chr.hash = chr.hash, 
         centromeres = centromeres), args.segmentation)
-    # not needed anymore
-    normalDB <- NULL
     
     vcf.germline <- NULL
     seg <- do.call(fun.segmentation,
