@@ -20,13 +20,15 @@ SIGNIFICANT USER-VISIBLE CHANGES
 
     o Made filterTargets and createTargetWeights defunct
     o setMappingBiasVcf now returns a data.frame
-    o Best practices vignette now HTML-based.
+    o Best practices vignette now HTML-based
     o Renamed normal.panel.vcf.file in setMappingBiasVcf to mapping.bias.file;
       in 1.18, setMappingBiasVcf will not accept a VCF anymore but requires
       a precomputed mapping bias RDS file.  
     o calculateIntervalWeights now directly called by createNormalDatabase and
       information included in the normalDB RDS object. This function is thus 
       deprecated.
+    o column gene.mean in callAlterations output now weighted by interval
+      weights when available  
 
 BUGFIXES
 
